[gd_scene load_steps=11 format=3 uid="uid://dgdt3jh4d5vl1"]

[ext_resource type="FontFile" uid="uid://lsgrvo3ka24r" path="res://assets/ui/common/default_font.ttf" id="1_5mk11"]
[ext_resource type="Texture2D" uid="uid://ngtsojrjphfi" path="res://assets/ui/hud/assets/speedometer_base.png" id="1_qivl6"]
[ext_resource type="Script" path="res://assets/ui/hud/GameHUD.gd" id="1_wkl5x"]
[ext_resource type="Texture2D" uid="uid://l67s721rf5ou" path="res://assets/ui/hud/assets/speedometer_needle.png" id="2_feqnw"]
[ext_resource type="PackedScene" uid="uid://bbal7cvvvo5a0" path="res://assets/ui/hud/PlayerListRow.tscn" id="5_4557b"]
[ext_resource type="PackedScene" uid="uid://cjmwmmqykg4et" path="res://assets/ui/hud/components/LeaderboardRow.tscn" id="6_lvmin"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sddae"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_goj2m"]
bg_color = Color(0, 0, 0, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rc6ox"]
bg_color = Color(0, 0, 0, 0.784314)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rgy2b"]

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1_wkl5x")
_player_list_row = ExtResource("5_4557b")
_leaderboard_row = ExtResource("6_lvmin")

[node name="Speedometer" type="Panel" parent="."]
offset_left = 534.0
offset_top = 264.0
offset_right = 566.0
offset_bottom = 296.0
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxEmpty_sddae")

[node name="Base" type="Sprite2D" parent="Speedometer"]
position = Vector2(16, 16)
texture = ExtResource("1_qivl6")

[node name="Needle" type="Sprite2D" parent="Speedometer"]
position = Vector2(16, 16)
texture = ExtResource("2_feqnw")
hframes = 9

[node name="Speed" type="Label" parent="Speedometer"]
layout_mode = 0
offset_left = 9.0
offset_top = 11.0
offset_right = 51.0
offset_bottom = 53.0
scale = Vector2(0.33, 0.33)
theme_override_fonts/font = ExtResource("1_5mk11")
theme_override_font_sizes/font_size = 18
text = "200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerList" type="Panel" parent="."]
offset_right = 100.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_goj2m")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerList"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 70.0
theme_override_constants/separation = 0

[node name="StartCountdown" type="Panel" parent="."]
offset_left = 270.0
offset_top = 80.0
offset_right = 370.0
offset_bottom = 180.0

[node name="Label" type="Label" parent="StartCountdown"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("1_5mk11")
theme_override_font_sizes/font_size = 36
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Leaderboard" type="Panel" parent="."]
visible = false
offset_left = 160.0
offset_top = 60.0
offset_right = 480.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rc6ox")

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 230.0
theme_override_constants/separation = 0

[node name="Headings" type="HBoxContainer" parent="Leaderboard/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Leaderboard/VBoxContainer/Headings"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5mk11")
theme_override_font_sizes/font_size = 18
text = "No."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Leaderboard/VBoxContainer/Headings"]
custom_minimum_size = Vector2(120, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5mk11")
theme_override_font_sizes/font_size = 18
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Leaderboard/VBoxContainer/Headings"]
custom_minimum_size = Vector2(120, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5mk11")
theme_override_font_sizes/font_size = 18
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackToMenu" type="Button" parent="Leaderboard"]
layout_mode = 0
offset_left = 110.0
offset_top = 210.0
offset_right = 210.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("1_5mk11")
theme_override_font_sizes/font_size = 9
theme_override_styles/focus = SubResource("StyleBoxEmpty_rgy2b")
text = "Back to Menu"

[node name="Button" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -53.0
offset_bottom = 31.0
grow_horizontal = 0
text = "menu
"

[connection signal="pressed" from="Leaderboard/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
